--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -1,11 +1,13 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
     
 *{
     // border: solid 1px rgb(255, 1, 1);
 
     box-sizing: border-box;
 
-    font-family: a-otf-jun-pro, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-style: normal;
     // font-weight: 300;
 }
@@ -335,7 +337,7 @@ main{
 
     padding-bottom: 80px;
 
-    p{
+    h2{
         font-size: 16px;
 
         text-align: center;
@@ -366,6 +368,9 @@ main{
                 height: 60px;
 
                 text-decoration: none;
+
+                font-size: 14px;
+                font-weight: bold;
 
                 color: $text_color;
                 background-color: $bg_color;
@@ -405,6 +410,12 @@ main{
     justify-content: center;
     flex-direction: column;
 
+    h3{
+        font-size: 16px;
+        line-height: 32px;
+        text-align: center;
+    }
+
     p{
         font-size: 16px;
         line-height: 32px;
@@ -421,6 +432,8 @@ main{
         height: 60px;
 
         text-decoration: none;
+        font-size: 14px;
+        font-weight: bold;
 
         color: $text_color;
         background-color: $bg_color;
@@ -475,6 +488,7 @@ footer{
         }
         p{
             font-size: 14px;
+            font-weight: 600;
             margin: 0;
             padding: 0;
             text-align: left;
