--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
 * {
-  font-family: a-otf-jun-pro, sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   font-style: normal;
 }
 
@@ -388,6 +389,7 @@ footer .footer_link a {
 }
 footer .footer_link p {
   font-size: 14px;
+  font-weight: 600;
   margin: 0;
   padding: 0;
   text-align: left;
