--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -1,11 +1,13 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
     
 *{
     // border: solid 1px rgb(255, 1, 1);
 
     box-sizing: border-box;
 
-    font-family: a-otf-jun-pro, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     font-style: normal;
     // font-weight: 300;
 }
@@ -233,155 +235,123 @@ header{
     }
 }
 
-/*-----title-----*/
+/*-----section-----*/
 
-section{
-    width: 100%;
-    padding-top: 80px;
+.title{
+    position: relative;
 
-    h1{
-        position: relative;
+    margin-top: 80px;
+    padding: 32px 16px 32px 40px;
 
-        font-size: 30px;
+    font-size: 30px;
 
-        padding: 32px 0 32px 40px;
+    background-image: url(../../img/slash-01.svg);
+    background-repeat: no-repeat;
+    background-size: 150% 300%;
+    background-position: 20% 20%;
 
-        background-image: url(../../img/slash-01.svg);
-        background-repeat: no-repeat;
-        background-position: right -80px bottom -100px;
-        // background-position: 100px -50px;
-        background-size: 80% 300%;
+    color: $text_color;
+}
+.title::before{
+    content: '';
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 24px;
+
+    background-color: $base_color;
+    width: 12px;
+    height: 50px;
+}
+
+.content{
+    ul{
+        list-style: none;
     }
 
     h2{
-        position: relative;
-        background-color: $base_color;
-
-        padding: 16px;
-
-        color: $bg_color;
         text-align: center;
+
+        padding: 16px ;
+        background-color: $base_color;
+        color: $bg_color;
         font-size: 24px;
-
-        margin: 32px 0;
-    }
-    .coding > h2{
-        margin-top: 0;
     }
 
-    .coding > ul,
-    .design > ul,
-    .basic > ul{
-        margin: 0 auto;
-        margin-bottom: 16px;
-        
-        width: 90%;
-
-        list-style: none;
-
-        background-color: rgba($color: #73B7BB, $alpha: 30%);
-
-        border-radius: 20px;
-
-        height: 160px;
-        /*-----overflow ... -----*/
-        display: -webkit-box;
-        overflow: hidden;
-        -webkit-line-clamp: 4;
-        word-break: break-all;
-        text-overflow: ellipsis;
-        /* autoprefixer: off */
-        -webkit-box-orient: vertical;
-        /* autoprefixer: off */
-
-        /*-----overflow ... -----*/
-    }
     h3{
-        color: $text_color;
-
         position: relative;
 
-        font-size: 18px;
+        font-size: 16px;
 
-        padding: 16px 32px;
-    }
+        padding: 16px 0 16px 40px;
 
-    h3::before{
-        content: '';
-
-        position: absolute;
-
-        background-color: $text_color;
-
-        border-radius: 50%;
-
-        width: 8px;
-        height: 8px;
-
-        top: 50%;
-        transform: translateY(-50%);
-        left: 16px;
-    }
-    h3::after{
-        content: '>';
-
-        position: absolute;
-        
-        color: $text_color;
-
-        top: 50%;
-        transform: translateY(-55%);
-        right: 16px;
-
-    }
-
-    .coding > ul > li > p,
-    .design > ul > li > p,
-    .basic > ul > li > p{
+        border-bottom: 3px solid $main_color;
 
         color: $text_color;
 
-        padding: 0 8px 16px 8px;
+        margin: 16px;
+    }
+
+    p{
+
+        color: $text_color;
 
         font-size: 14px;
 
-        line-height: 32px;
+        line-height: 24px;
     }
 }
-h1::before{
+
+// .content  > ul > li > ul{
+//     height: 0;
+
+//     overflow: hidden;
+// } 
+
+.coding ul,
+.design ul,
+.basic ul{
+    display: none;
+
+    border-bottom: 3px solid $main_color;
+    margin: 0 16px;
+}
+
+.content > ul li > p, .content > ul li > img{
+    padding: 16px;
+}
+.content > ul li > img{
+    margin: 0 auto;
+}
+
+h3::before{
     content: '';
     position: absolute;
 
-    width: 12px;
-    height: 50px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
 
-    background-color: $base_color;
-
-    top: 32px;
-    left: 20px;
-}
-
-h2::before{
-    content: url(../../img/open.svg);
-    position: absolute;
-
-    width: 24px;
-    height: 24px;
+    background-color: $text_color;
 
     top: 50%;
-    transform: translateY(-60%);
-    left: 20%;
+    transform: translateY(-55%);
+    left: 16px;
 }
-h2::after{
-    content: url(../../img/open.svg);
+h3::after{
+    content: '';
     position: absolute;
 
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 16px;
+
+    background-image: url(../../img/opencontent.svg);
+    background-repeat: no-repeat;
 
     top: 50%;
-    transform: translateY(-60%);
-    right: 20%;
+    transform: translateY(-55%);
+    right: 16px;
 }
 
 /*-----footer-----*/
@@ -396,6 +366,8 @@ footer{
 
     border-top: 3px solid $base_color;
     background-color: $bg_color;
+
+    margin-top: 32px;
 
     .footer_link{
         margin: 0 auto;
@@ -419,6 +391,7 @@ footer{
         }
         p{
             font-size: 14px;
+            font-weight: 600;
             margin: 0;
             padding: 0;
             text-align: left;
@@ -486,3 +459,15 @@ footer{
     opacity: 1;
     overflow: hidden;
 }
+
+/*-----hover-----*/
+
+// h3:hover{
+//     border-bottom: 3px solid $base_color;
+// }
+
+// .coding ul:hover,
+// .design ul:hover,
+// .basic ul:hover{
+//     border-bottom: 3px solid $base_color;
+// }
