--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -14,7 +14,9 @@ body {
   width: 100%;
   height: 100vh;
   padding: 16px;
+  margin: 0 auto;
   background-color: #1361A5;
+  overflow: hidden;
 }
 .test_body .frame {
   background-color: #ffffff;
@@ -27,24 +29,148 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  white-space: nowrap;
 }
 .test_body .frame .first_page {
   width: 100%;
   height: 100%;
   border: 3px solid #73B7BB;
   border-radius: 20px;
+  padding: 40px 16px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../../img/coding01.svg);
+  background-repeat: no-repeat;
+  background-size: 300px 300px;
+  background-position: 50% 500px;
 }
-.test_body .frame .test {
+.test_body .frame .first_page .content_start {
+  text-align: center;
+}
+.test_body .frame .first_page .content_start .start_word {
+  margin-bottom: 56px;
+  color: #343434;
+}
+.test_body .frame .first_page button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px auto;
+  width: 200px;
+  height: 60px;
+  background-color: #ffffff;
+  border: 3px solid #73B7BB;
+  border-radius: 30px;
+  color: #343434;
+  cursor: pointer;
+  font-weight: bold;
+  transition-duration: 0.3s;
+}
+
+.test {
   width: 100%;
   height: 100%;
   border: 3px solid #73B7BB;
   border-radius: 20px;
-  display: none;
+  padding: 40px 16px;
+  position: relative;
+  top: -100%;
+  right: -100vw;
+  background-color: #ffffff;
+}
+.test .quiz_title {
+  color: #343434;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  position: relative;
+}
+.test .quiz_content {
+  font-size: 14px;
+  line-height: 24px;
+  padding: 24px;
+  color: #797979;
+  margin: 24px 0 8px 0;
+  text-align: center;
+}
+.test button {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 16px auto;
+  width: 200px;
+  height: 60px;
+  background-color: #ffffff;
+  border: 3px solid #73B7BB;
+  border-radius: 30px;
+  color: #343434;
+  cursor: pointer;
+  font-weight: bold;
+  transition-duration: 0.3s;
+}
+.test .normal {
+  background-color: #73B7BB;
+  border: 3px solid #73B7BB;
+  color: #ffffff;
+}
+.test .test_content {
+  height: 500px;
+}
+.test .test_content .button {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.test_show {
+  width: 100%;
+  height: 100%;
+  border: 3px solid #73B7BB;
+  border-radius: 20px;
+  padding: 40px 16px;
+  position: relative;
+  top: -100%;
+  right: 0;
+  background-color: #ffffff;
+  transition-duration: 0.8s;
 }
 
 h1 {
   font-size: 30px;
-  line-height: 40px;
+  line-height: 56px;
   text-align: center;
+  color: #343434;
+}
+
+.block {
+  width: 90%;
+  height: 10px;
+  background-color: #1361A5;
+  border-radius: 20px;
+  margin: 56px auto;
+}
+
+.bgc_pic {
+  z-index: 0;
+  position: absolute;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.1;
+}
+
+/*-----hover-----*/
+button:hover {
+  background-color: #73B7BB !important;
+  color: #ffffff !important;
+  transition-duration: 0.3s;
+}
+
+.normal:hover {
+  background-color: #ffffff !important;
+  border: 3px solid #73B7BB !important;
+  color: #343434 !important;
 }/*# sourceMappingURL=test.css.map */
