--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
 * {
   font-family: "Noto Sans JP", sans-serif;
@@ -41,7 +42,7 @@ body {
   background-image: url(../../img/coding01.svg);
   background-repeat: no-repeat;
   background-size: 300px 300px;
-  background-position: 50% 500px;
+  background-position: 50% 480px;
 }
 .test_body .frame .first_page .content_start {
   text-align: center;
@@ -84,14 +85,6 @@ body {
   text-align: center;
   position: relative;
 }
-.test .quiz_content {
-  font-size: 14px;
-  line-height: 24px;
-  padding: 24px;
-  color: #797979;
-  margin: 24px 0 8px 0;
-  text-align: center;
-}
 .test button {
   position: relative;
   z-index: 1;
@@ -124,12 +117,39 @@ body {
   transform: translateX(-50%);
 }
 
+.quiz_content {
+  position: relative;
+  font-size: 14px;
+  line-height: 24px;
+  padding: 10px;
+  color: #ffffff;
+  text-align: center;
+  background-color: #73B7BB;
+  border-radius: 16px;
+  margin: 32px 0;
+}
+
+.quiz_content::before {
+  content: "";
+  background-image: url(../../img/對話框三角形_アートボード\ 1.svg);
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: -35px;
+  left: 0;
+}
+
+.quiz_content_hide {
+  display: none;
+}
+
 .test_show {
   width: 100%;
   height: 100%;
   border: 3px solid #73B7BB;
   border-radius: 20px;
-  padding: 40px 16px;
+  padding: 40px 8px;
   position: relative;
   top: -100%;
   right: 0;
@@ -149,7 +169,7 @@ h1 {
   height: 10px;
   background-color: #1361A5;
   border-radius: 20px;
-  margin: 56px auto;
+  margin: 40px auto;
 }
 
 .bgc_pic {
