--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -66,7 +66,7 @@ body{
             background-image: url(../../img/coding01.svg);
             background-repeat: no-repeat;
             background-size: 300px 300px;
-            background-position: 50% 500px;
+            background-position: 50% 480px;
 
             .content_start{
                 text-align: center;
@@ -128,20 +128,6 @@ body{
 
     }
 
-    .quiz_content{
-        font-size: 14px;
-        line-height: 24px;
-
-        padding: 24px;
-
-        color: #797979;
-
-        margin: 24px 0 8px 0;
-
-        text-align: center;
-
-    }
-
     button{
         position: relative;
         z-index: 1;
@@ -183,6 +169,42 @@ body{
     }
 }
 
+.quiz_content{
+    position: relative;
+
+    font-size: 14px;
+    line-height: 24px;
+
+    padding: 10px;
+
+    color: $bg_color;
+
+    text-align: center;
+
+    // border: 1px solid $main_color;
+    background-color: $main_color;
+    border-radius: 16px ;
+
+    margin: 32px 0;
+}
+.quiz_content::before{
+    content: '';
+
+    background-image: url(../../img/對話框三角形_アートボード\ 1.svg);
+    // background-size: 100px 200px;
+    background-repeat: no-repeat;
+
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -35px;
+    left: 0;
+}
+
+.quiz_content_hide{
+    display: none;
+}
+
 .test_show{
     width: 100%;
     height: 100%;
@@ -190,7 +212,7 @@ body{
     border: 3px solid $main_color;
     border-radius: 20px;
 
-    padding: 40px 16px;
+    padding: 40px 8px;
     position: relative;
     top: -100%;
     right: 0;
@@ -216,7 +238,7 @@ h1{
     background-color: $base_color;
     border-radius: 20px;
 
-    margin: 56px auto;
+    margin: 40px auto;
 }
 
 // .quiz_title::after{
