--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -17,7 +17,6 @@ body {
   padding: 16px;
   margin: 0 auto;
   background-color: #1361A5;
-  overflow: hidden;
 }
 .test_body .frame {
   background-color: #ffffff;
@@ -74,8 +73,6 @@ body {
   border-radius: 20px;
   padding: 40px 16px;
   position: relative;
-  top: -100%;
-  right: -100vw;
   background-color: #ffffff;
 }
 .test .quiz_title {
@@ -117,6 +114,28 @@ body {
   transform: translateX(-50%);
 }
 
+.score_page {
+  width: 100%;
+  height: 100%;
+  border: 3px solid #73B7BB;
+  border-radius: 20px;
+  padding: 40px 16px;
+  position: relative;
+}
+
+.score_show {
+  width: 100%;
+  height: 100%;
+  border: 3px solid #73B7BB;
+  border-radius: 20px;
+  padding: 40px 8px;
+  position: relative;
+  top: -100%;
+  right: 0;
+  background-color: #ffffff;
+  transition-duration: 0.8s;
+}
+
 .quiz_content {
   position: relative;
   font-size: 14px;
@@ -155,6 +174,30 @@ body {
   right: 0;
   background-color: #ffffff;
   transition-duration: 0.8s;
+}
+
+.rank_btn {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.rank_btn button {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 16px auto;
+  width: 290px;
+  height: 60px;
+  background-color: #ffffff;
+  border: 3px solid #73B7BB;
+  border-radius: 30px;
+  color: #343434;
+  cursor: pointer;
+  font-weight: bold;
+  transition-duration: 0.3s;
 }
 
 h1 {
