--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -30,6 +30,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
 }
 .test_body .frame .first_page {
   width: 100%;
@@ -74,6 +75,8 @@ body {
   border-radius: 20px;
   padding: 40px 16px;
   position: relative;
+  top: -100%;
+  right: -100vw;
   background-color: #ffffff;
 }
 .test .quiz_title {
