--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -33,7 +33,7 @@ body{
 
     background-color: $base_color;
 
-    // overflow: hidden;
+    overflow: hidden;
 
     .frame{
         background-color: $bg_color;
@@ -92,6 +92,8 @@ body{
                 border-radius: 30px;
 
                 color: $text_color;
+                font-size: 14px;
+                font-weight: bold;
 
                 cursor: pointer;
                 font-weight: bold;
@@ -103,6 +105,8 @@ body{
 }
 
 .test{
+    position: relative;
+
     width: 100%;
     height: 100%;
 
@@ -111,8 +115,8 @@ body{
 
     padding: 40px 16px;
     position: relative;
-    // top: -100%;
-    // right: -100vw;
+    top: -100%;
+    right: -100vw;
 
     background-color: $bg_color;
 
@@ -144,6 +148,8 @@ body{
         border-radius: 30px;
 
         color: $text_color;
+        font-size: 14px;
+        font-weight: bold;
 
         cursor: pointer;
         font-weight: bold;
@@ -161,15 +167,22 @@ body{
         height: 500px;
 
         .button{
+            font-size: 14px;
+            font-weight: bold;
+
             position: absolute;
-            bottom: 50px;
+            bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
+
+            font-size: 14px;
+            font-weight: bold;
         }
     }
 }
 
 .score_page{
+    position: relative;
     width: 100%;
     height: 100%;
 
@@ -179,7 +192,7 @@ body{
     padding: 40px 16px;
     position: relative;
     // top: -100%;
-    // right: -100vw;
+    right: -100vw;
 
     .jec, .get_doc{
 
@@ -191,19 +204,24 @@ body{
     .rank{
         position: relative;
 
-        margin: 0 auto;
+        margin: 40px auto;
 
-        width: 30%;
-        height: 20%;
+        width: 110px;
+        height: 100px;
     }
 
     .commend{
+        position: relative;
+        bottom: 0;
+
         color: $text_color;
 
-        font-size: 16px;
+        font-size: 14px;
         line-height: 35px;
 
         text-align: center;
+
+        margin: 50px auto;
     }
 }
 
@@ -222,6 +240,7 @@ b{
 }
 
 .score_show{
+    position: absolute;
     width: 100%;
     height: 100%;
 
@@ -306,13 +325,15 @@ b{
         margin: 16px auto;
 
         width: 290px;
-        height: 60px;
+        height: 50px;
 
         background-color: $bg_color;
         border: 3px solid $main_color;
         border-radius: 30px;
 
         color: $text_color;
+        font-size: 14px;
+        font-weight: bold;
 
         cursor: pointer;
         font-weight: bold;
@@ -362,9 +383,9 @@ h1{
 .bgc_pic{
     z-index: 0;
     position: absolute;
-    width: 300px;
+    width: 250px;
 
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     opacity: 0.1;
