--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -389,7 +389,7 @@ main{
         position: absolute;
         z-index: 0;
 
-        width: 230px;
+        width: 280px;
         height: auto;
 
         bottom: 0;
@@ -568,4 +568,74 @@ main a:hover, main ul>li>a:hover{
     right: 0;
     opacity: 1;
     overflow: hidden;
+}
+
+/*--------------------
+
+Tab Version
+
+--------------------*/
+
+@media screen and (min-width: 600px){
+    
+    footer{
+        .footer_link{
+            gap: 100px;
+            }
+    }
+
+    .webdesign_intro{
+        text-align: center;
+
+        .img{
+            width: 500px !important;
+
+            img{
+                width: 500px !important;
+            }
+        }
+    }
+
+    .class_intro img{
+        width: 300px;
+    }
+}
+
+@media screen and (min-width: 768px){
+    
+    footer{
+        height: 100%;
+        max-height: 250px;
+
+        padding-top: 24px;
+
+        .footer_link{
+            // gap: 200px;
+            gap: 0;
+            width: 90%;
+
+            .footer_link_a{
+                display: flex;
+                flex-direction: unset;
+
+                a{
+                    margin: 8px;
+                }
+            }
+        }
+    }
+
+    .menu_body{
+        z-index: 10;
+    
+        width: 70vw;
+        height: 100vh;
+        padding-top: 20%;
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        box-shadow: -5px 0px 20px #0a3c6793;    }
 }
