--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -517,4 +517,59 @@ section a:hover {
   100% {
     right: 16px;
   }
+}
+/*--------------------
+
+Tab Version
+
+--------------------*/
+@media screen and (min-width: 600px) {
+  footer .footer_link {
+    gap: 100px;
+  }
+  .one {
+    width: 250px;
+  }
+  .two {
+    width: 250px;
+    top: 240px;
+  }
+  .test_intro_content::before {
+    content: "";
+    background-image: url(../../img/tag_アートボード\ 1.svg);
+    position: absolute;
+    top: -30px;
+    background-repeat: no-repeat;
+    height: 90px;
+    width: 90px;
+  }
+}
+@media screen and (min-width: 768px) {
+  footer {
+    height: 100%;
+    max-height: 250px;
+    padding-top: 24px;
+  }
+  footer .footer_link {
+    gap: 0;
+    width: 90%;
+  }
+  footer .footer_link .footer_link_a {
+    display: flex;
+    flex-direction: unset;
+  }
+  footer .footer_link .footer_link_a a {
+    margin: 8px;
+  }
+  .menu_body {
+    z-index: 10;
+    width: 70vw;
+    height: 100vh;
+    padding-top: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -5px 0px 20px rgba(10, 60, 103, 0.5764705882);
+  }
 }/*# sourceMappingURL=index.css.map */
