--- a/CSS/secondCSS/curricula_second.css
+++ b/CSS/secondCSS/curricula_second.css
@@ -355,4 +355,41 @@ footer .copyright {
   overflow: hidden;
 }
 
-/*-----hover-----*//*# sourceMappingURL=curricula_second.css.map */
+/*-----hover-----*/
+@media screen and (min-width: 600px) {
+  footer .footer_link {
+    gap: 100px;
+  }
+}
+@media screen and (min-width: 768px) {
+  footer {
+    height: 100%;
+    max-height: 250px;
+    padding-top: 24px;
+  }
+  footer .footer_link {
+    gap: 0;
+    width: 90%;
+  }
+  footer .footer_link .footer_link_a {
+    display: flex;
+    flex-direction: unset;
+  }
+  footer .footer_link .footer_link_a a {
+    margin: 8px;
+  }
+  .menu_body {
+    z-index: 10;
+    width: 70vw;
+    height: 100vh;
+    padding-top: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -5px 0px 20px rgba(10, 60, 103, 0.5764705882);
+  }
+  .content > ul {
+    margin: 5%;
+  }
+}/*# sourceMappingURL=curricula_second.css.map */
