--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -471,3 +471,56 @@ footer{
 // .basic ul:hover{
 //     border-bottom: 3px solid $base_color;
 // }
+
+@media screen and (min-width: 600px){
+    
+    footer{
+        .footer_link{
+            gap: 100px;
+            }
+    }
+}
+
+@media screen and (min-width: 768px){
+    
+    footer{
+        height: 100%;
+        max-height: 250px;
+
+        padding-top: 24px;
+
+        .footer_link{
+            // gap: 200px;
+            gap: 0;
+            width: 90%;
+
+            .footer_link_a{
+                display: flex;
+                flex-direction: unset;
+
+                a{
+                    margin: 8px;
+                }
+            }
+        }
+    }
+
+    .menu_body{
+        z-index: 10;
+    
+        width: 70vw;
+        height: 100vh;
+        padding-top: 20%;
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        box-shadow: -5px 0px 20px #0a3c6793;
+    }
+
+    .content > ul{
+        margin: 5%;
+    }
+}
